--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,61 @@
-# Compiled Object files
-*.slo
-*.lo
+# Some general ignore patterns
+build/
+obj/
 *.o
-*.obj
+Debug*/
+Release*/
+*.mode*
+*.app/
+*.pyc
+.svn/
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
 
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
+#XCode
+*.pbxuser
+*.perspective
+*.perspectivev3
+*.mode1v3
+*.mode2v3
+#XCode 4
+xcuserdata
+*.xcworkspace
 
-# Executables
-*.exe
-*.out
-*.app
+#Code::Blocks
+*.depend
+*.layout
 
-# OS X
-*.DS_Store
+#Visual Studio
+*.sdf
+*.opensdf
+*.suo
+ipch/
+
+#Eclipse
+.metadata
+local.properties
+.externalToolBuilders
+
+
+# OS-specific ignore patterns
+
+#Linux
+*~
+# KDE
+.directory
+
+#OSX
+.DS_Store
+*.swp
+*~.nib
+# Thumbnails
+._*
+
+#Windows
+# Windows image file caches
+Thumbs.db
+# Folder config file
+Desktop.ini
+
+#Android
+.csettings
+/libs/openFrameworksCompiled/project/android/paths.make
